@@ -1,5 +1,7 @@
 Changes for 1.8.3
 
+ - [ZBX-2241] fixed graph X axis for big periods (Aly)
+ - [ZBX-2241] fixed text collide in graphs (Aly)
  - [ZBX-2232] fixed bug with last event duration time in event details (AM)
  - [ZBX-2243] fixed bug when cannot select template for item filter by host (Vedmak)
  - [ZBX-2240] fixed "undefined index" in monitoring latest data (Vedmak)
